# todo_list

./: .gitignore  Cargo.toml  Dioxus.toml  package.json
assets/: tailwind.css
src/: main.rs  style.css  todo_list.rs
src/components/: input_section.rs  mod.rs  todo.rs  todos_section.rs
src/models/: mod.rs  persist_storage.rs  todo.rs  todos.rs
src/storage/: desktop_storage.rs  mod.rs  persist_storage.rs  web_storage.rs
