[package]
name = "todo_list"
version = "0.1.0"
authors = ["light-yagami"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
web-sys = { version = "0.3.81", features = ["Storage", "Window"] }
uuid = {version = "1.18.1", features = ["v4", "js"] }
serde = "1.0.228"
serde_json = "1.0.145"
dirs = "6.0.0"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
